fix logo color swatches alignment

--- a/packages/core/stories/styles/index.scss
+++ b/packages/core/stories/styles/index.scss
@@ -99,10 +99,11 @@ ul.sg-colors {
   padding: 0;
 }
 
-// Button story
+// Logo story
 .ma__row {
   display: flex;
   flex-direction: row;
+  align-items: baseline;
   & > *:not(:first-child) {
     margin-left: 1rem;
   }
